--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,3 @@
 cmake_minimum_required(VERSION 3.2)
 
-execute_process(COMMAND go build -o pbrain-gogomoku.exe src/main/go/main.go)
+execute_process(COMMAND build.bat)
